force-app/main/default/objects/Interaction_Signal__c/Interaction_Signal__c.object-meta.xml
<CustomObject>
    <description>하나의 Interaction Intelligence 레코드에서 추출된 개별(원자적) 신호 하나를 저장합니다. 하나의 상호작용은 여러 개의 Signal을 가질 수 있습니다(예: High Interest + Budget Concern). Opportunity는 Interaction_Intelligence__c를 통해서만 조회하며 이 오브젝트에 직접 중복 저장하지 않습니다.</description>
    <label>Interaction Signal</label>
    <nameField>
        <displayFormat>SIG-{00000000}</displayFormat>
        <label>Interaction Signal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Signals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>