force-app/main/default/objects/Interaction_Signal__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>이 신호가 긍정/부정/중립 중 어느 방향인지. Signal_Type__c에 고정적으로 매핑되지 않고 매 신호마다 맥락에 따라 개별 판단합니다(예: Competitor Mentioned가 항상 부정은 아님).</description>
    <label>Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>