force-app/main/default/objects/Interaction_Signal__c/fields/Signal_Category__c.field-meta.xml
<CustomField>
    <fullName>Signal_Category__c</fullName>
    <description>이 신호가 속하는 상위 분류. Opportunity Score 등에서 집계(GROUP BY) 기준으로 사용하기 위해 제한된 값 목록으로 관리합니다.</description>
    <label>Signal Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INTEREST</fullName>
                <label>Interest</label>
            </value>
            <value>
                <fullName>BUDGET</fullName>
                <label>Budget</label>
            </value>
            <value>
                <fullName>DECISION</fullName>
                <label>Decision</label>
            </value>
            <value>
                <fullName>FIT</fullName>
                <label>Fit</label>
            </value>
            <value>
                <fullName>COMPETITION</fullName>
                <label>Competition</label>
            </value>
            <value>
                <fullName>TIMING</fullName>
                <label>Timing</label>
            </value>
            <value>
                <fullName>MOMENTUM</fullName>
                <label>Momentum</label>
            </value>
            <value>
                <fullName>RISK</fullName>
                <label>Risk</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>