force-app/main/default/objects/Interaction_Signal__c/fields/Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>Signal_Type__c</fullName>
    <description>Signal_Category__c보다 세부적인 신호 유형. 초기 값 목록은 예시 태그 모음이며, 값 목록을 제한(restricted)하지 않아 향후 새로운 유형을 배포 없이 추가할 수 있도록 합니다. 실제로 자주 쓰이는 값이 안정화되면 restricted picklist로 전환을 검토합니다.</description>
    <label>Signal Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High Interest</fullName>
            </value>
            <value>
                <fullName>Low Interest</fullName>
            </value>
            <value>
                <fullName>Budget Confirmed</fullName>
            </value>
            <value>
                <fullName>Budget Concern</fullName>
            </value>
            <value>
                <fullName>Decision Maker Engaged</fullName>
            </value>
            <value>
                <fullName>Internal Approval Pending</fullName>
            </value>
            <value>
                <fullName>Decision Process Unclear</fullName>
            </value>
            <value>
                <fullName>Strong Brand Fit</fullName>
            </value>
            <value>
                <fullName>Competitor Mentioned</fullName>
            </value>
            <value>
                <fullName>Category Conflict</fullName>
            </value>
            <value>
                <fullName>Next Step Agreed</fullName>
            </value>
            <value>
                <fullName>Timing Confirmed</fullName>
            </value>
            <value>
                <fullName>Timing Risk</fullName>
            </value>
            <value>
                <fullName>Stalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>